# PIXLPAL-M1

./: .gitignore  .gitignore.save  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
Pixlpal Schematic - BOM - Enclosure files/: LICENSE  Pixlpal-M1 3D printed Edges.step
components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_ChatGPT/: CMakeLists.txt  mtb_chatGPT.cpp
components/App_Apple_Notifications/: CMakeLists.txt  appleNotifications.cpp
components/App_Aud_Spectrum_Analyzer/: CMakeLists.txt  audSpectrumAnalyzer.cpp
components/App_BigClock/: CMakeLists.txt  bigClockCalendar.cpp
components/App_ChatGPT_ChatCompletions/: CMakeLists.txt  mtbChatGPT.cpp
components/App_Crypto_Stats/: CMakeLists.txt  crypto_Stats.cpp
components/App_CurrencyExchange/: CMakeLists.txt  currencyExchange.cpp
components/App_Finnhub/: CMakeLists.txt  finnhub_Stats.cpp
components/App_GoogleWeather/: CMakeLists.txt  googleWeather.cpp
components/App_Google_Calendar/: CMakeLists.txt  googleCalendar.cpp
components/App_Google_News/: CMakeLists.txt  googleNews.cpp
components/App_Internet_Radio/: CMakeLists.txt  internet_Radio.cpp
components/App_LiveFootball/: CMakeLists.txt  Fixtures.json  live.json  liveFootball.cpp  standings.json  {"get":"fixtures","parameters":{"live":".json
components/App_Meterbit_Apple_Notifications/: appleNotifications.cpp
components/App_Meterbit_Aud_Spectrum_Analyzer/: audSpectrumAnalyzer.cpp
components/App_Meterbit_BigClock/: CMakeLists.txt  mtb_bigClock.cpp
components/App_Meterbit_Calendar_Clock/: CMakeLists.txt  mtb_cal_clk.cpp
components/App_Meterbit_ChatGPT/: mtb_chatGPT.cpp
components/App_Meterbit_Crypto_Stats/: crypto_Stats.cpp
components/App_Meterbit_Currency_Exchange/: currencyExchange.cpp
components/App_Meterbit_Finnhub/: CMakeLists.txt  finnhub_Stats.cpp
components/App_Meterbit_Google_Calendar/: googleCalendar.cpp
components/App_Meterbit_Google_News/: googleNews.cpp
components/App_Meterbit_Google_Weather/: googleWeather.cpp
components/App_Meterbit_Internet_Radio/: CMakeLists.txt  internet_Radio.cpp
components/App_Meterbit_Live_Football/: CMakeLists.txt  liveFootball.cpp
components/App_Meterbit_Music_Player/: CMakeLists.txt  musicPlayer.cpp
components/App_Meterbit_OpenMeteo/: openMeteo.cpp
components/App_Meterbit_OpenWeather/: CMakeLists.txt  openWeather.cpp
components/App_Meterbit_Outlook_Cal/: outlookAuth.cpp  outlookCalendar.cpp
components/App_Meterbit_PixelAnimClock/: CMakeLists.txt  pixelAnimClock.cpp
components/App_Meterbit_PolygonFX/: CMakeLists.txt  polygonFX.cpp
components/App_Meterbit_Rss_News_Reader/: CMakeLists.txt  rss_News_Reader.cpp
components/App_Meterbit_Spotify_Updates/: CMakeLists.txt  SpotifyAuth.cpp  mtbSpotifyInfo.cpp
components/App_Meterbit_Stopwatch/: realStopwatch.cpp
components/App_Meterbit_StudioLight/: CMakeLists.txt  studioLight.cpp
components/App_Meterbit_World_Clock/: CMakeLists.txt  worldClock.cpp
components/App_Meterbit_World_Flags/: worldFlags.cpp
components/App_MusicPlayer/: CMakeLists.txt  musicPlayer.cpp
components/App_OpenMeteo/: CMakeLists.txt  openMeteo.cpp
components/App_OpenWeather/: CMakeLists.txt  openWeather.cpp
components/App_Outlook_Calendar/: CMakeLists.txt  outlookCalendar.cpp
components/App_PixelAnimClock/: CMakeLists.txt  pixelAnimClock.cpp
components/App_PolygonFX/: CMakeLists.txt  README.md  polygonFX.cpp
components/App_Rss_News_Reader/: CMakeLists.txt  rss_News_Reader.cpp
components/App_Spotify_Infomation/: CMakeLists.txt  SpotifyAuth.cpp  SpotifyPlayback.cpp  mtbSpotifyInfo.cpp
components/App_Stopwatch/: CMakeLists.txt  realStopwatch.cpp
components/App_StudioLight/: CMakeLists.txt  studioLight.cpp
components/OpenAI-ESP32/: CMakeLists.txt
components/OpenAI-ESP32/examples/ChatCompletion/: ChatCompletion.ino
components/OpenAI-ESP32/tinyusb/: README.md
components/OpenAI-ESP32/tinyusb/hw/bsp/max32650/: family.mk
components/OpenAI-ESP32/tinyusb/hw/bsp/ra/boards/portenta_c33/ra_cfg/fsp_cfg/bsp/: bsp_mcu_family_cfg.h
components/OpenAI-ESP32/tinyusb/hw/bsp/ra/boards/ra4m3_ek/ra_cfg/fsp_cfg/bsp/: bsp_mcu_family_cfg.h
components/OpenAI-ESP32/tinyusb/hw/bsp/ra/boards/ra6m5_ek/script/: fsp.ld
components/OpenAI-ESP32/tinyusb/hw/bsp/ra/boards/ra8m1_ek/ra_cfg/fsp_cfg/bsp/: bsp_mcu_family_cfg.h
components/OpenAI-ESP32/tinyusb/hw/bsp/ra/boards/ra8m1_ek/script/: fsp.ld
components/OpenAI-ESP32/tinyusb/src/class/audio/: audio_device.h
components/OpenAI-ESP32/tinyusb/src/common/: tusb_fifo.c
components/OpenAI-ESP32/tinyusb/src/portable/raspberrypi/rp2040/: rp2040_usb.c
components/meterbit_ble/: CMakeLists.txt  mtb_ble.cpp  mtb_ble_settings.cpp  mtb_ble_software_update.cpp  mtb_ble_system.cpp  mtb_ble_wifi.cpp
components/meterbit_ble/include/: mtb_ble.h
components/meterbit_engine/: CMakeLists.txt  mtb_engine.cpp  mtb_status_bar_clock.cpp  mtb_usb_ota.cpp
components/meterbit_engine/include/: commonApps.h  mtb_engine.h  psram_allocator.h
components/meterbit_system/: CMakeLists.txt  mtb_buzzer.cpp  mtb_littleFs.cpp  mtb_ntp.cpp  mtb_nvs.cpp  mtb_system.cpp  mtb_usb_msc.cpp
components/meterbit_system/include/: mtb_countries.h  mtb_littleFs.h  mtb_ntp.h  mtb_nvs.h  mtb_system.h
components/mtbApps/: CMakeLists.txt  USBFS.cpp  classClk.cpp  firmwareOTA_Update.cpp  mtbApps.cpp  mtbUSBFS.cpp  statusBarClock.cpp  usb_msc.cpp
components/mtbApps/include/: USBFS.h  classClk.h  msc.h  mtbApps.h  mtbUSB_OTA.h  world_countries.h
components/mtbBLE_Control/: CMakeLists.txt  bleSettings.cpp  mtbBLE_Control.cpp  softwareUpdate.cpp  systemSettings.cpp  wifiSettings.cpp
components/mtbBLE_Control/include/: mtbBLE_Control.h
components/mtbCore/: CMakeLists.txt  beep.cpp  gif_Lib.cpp  gifdec.c  ledPanel.cpp  littleFSMgr.cpp  ntpTime.cpp  nvsMem.cpp  scrollMsgs.cpp  systemm.cpp
components/mtbCore/include/: beep.h  fonts.h  gif_Lib.h  ledPanel.h  mtbColors.h  ntpTime.h  nvsMem.h  scrollMsgs.h  systemm.h  world_countries.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
partition_table/: partitionTable.csv
(+254 files in other folders)
